<resources>
    <string name="app_name">BrainBit Android</string>
    <string name="btn_start_search_title">Start search</string>
    <string name="btn_stop_search_title">Stop search</string>

    <string name="dev_state_title">State:</string>
    <string name="dev_power_title">Power:</string>

    <string name="dev_state_connected">Connected</string>
    <string name="dev_state_disconnected">Disconnected</string>
    <string name="dev_power_empty">-</string>
    <string name="dev_power_prc">%1$d %%</string>

    <string name="device_search_connected">Device connection success</string>
    <string name="device_search_connection_failed">Device connection failed</string>

    <string name="err_start_signal">Failed start signal</string>
    <string name="err_stop_signal">Failed stop signal</string>

    <string name="el_resistance_o1_title">O1:</string>
    <string name="el_resistance_o2_title">O2:</string>
    <string name="el_resistance_t3_title">T3:</string>
    <string name="el_resistance_t4_title">T4:</string>
    <string name="el_resistance_value">%1$.1f kOm</string>
    <string name="el_resistance_infinity_value">ꝏ kOm</string>

    <string name="alpha_rhythm_title">alpha:</string>
    <string name="beta_rhythm_title">beta:</string>
    <string name="theta_rhythm_title">theta:</string>
    <string name="el_rhythm_value">%1$.1f %%</string>

    <string name="resistance_demo_mode_title">Resistance</string>
</resources>